<resources>
    <string name="app_name">Homework04</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dishLabel">Dish:</string>
    <string name="ingrediantsLabel">Add Ingrediants:</string>
    <string name="submitButton">Submit</string>
    <string name="buttonFinished">Finish</string>
    <string name="title">Title:</string>
    <string name="ingrediants">Ingrediants:</string>
    <string name="url">URL:</string>
</resources>
